syntax = "proto3";
option java_package="cn.migu.selection.proto.base";
message ActivityBannerResponse{
    string pluginCode=1;
	string status=2;
    string isvisable=3;
	ActivityBannerData data=4;
	string messageDesc=5;
}

message	ActivityBannerData{
	string isMarginTop=1;
	string isMarginBottom=2;
	string isPaddingTop=3;
	string isShowLine =4;
    string linkType=5;
    string pictureUrl=6;
    repeated ActivityBanners links = 7;	
}

message	ActivityBanners{
	string linkUrl=1;
	string startExPage=2;
}